Added default image-mimeviewer. Moved mime-guessing code from File to Mimeviewer. Added silvercity-support for svg and javascript coloring.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@434 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/code.css
+++ b/htdocs/css/code.css
@@ -3,6 +3,9 @@
   padding: .5em 1em;
   margin: 1em 0;
 }
+.image-file { margin: 1em; }
+.image-file-frame { }
+.image-file-frame img {  border: 15px solid #d7d7d7; }
 .code_default { font-family: monospace; font-size: 9px; }
 .css_class { color: #900000; }
 .css_comment { color: green; font-style: italic; }
