Added attachment support (both wiki and tickets). This required a schema change so "trac-admin /path/to/project upgrade" is required.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@436 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/ticket.css
+++ b/htdocs/css/ticket.css
@@ -71,3 +71,9 @@ li.tkt-chg-change { margin: 0; }
 #nt-right { margin-left: 40%; }
 #nt-buttons {  padding-top: .5em; text-align: right; }
 
+tr.attachment-listhdr { border-bottom: 1px solid #d7d7d7; }
+tr.attachment-listhdr th {
+  text-align: left;
+  padding: 0 1em 0 0;
+  font-size: 13px;
+}
