Fixed color legend layout problem in wiki diffs. Closes #348.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@494 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/changeset.css
+++ b/htdocs/css/changeset.css
@@ -42,6 +42,7 @@ ul.chg-list {
  float: right;
  border: 1px solid #d7d7d7;
  padding: .5em;
+ line-height: 100%;
 }
 #chg-legend h3 { 
   display: none;
