* Cleanup markup and styles used in the page header and footer  * Fix ticket #372
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@516 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -38,7 +38,12 @@ a.tl-item:hover {
   color: #000;
 }
 .tl-item-time { color: #777; }
-.tl-item-link { font-weight: normal; }
+.tl-item-link {
+  border-bottom: 1px dotted #bbb;
+  color: #b00;
+  font-weight: normal;
+  text-decoration: none;
+}
 .tl-item-msg { }
 .tl-item-descr {
   display: block;
