Fix a minor layout glitch in the navigation bar, where the active item would become one pixel two wide when in hover state.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@528 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -136,7 +136,7 @@ legend {
 #navbar .active:link, #navbar .active:visited {
   background: url(../topbar_active.png) top left repeat-x #d7d7d7;
   border-top: none;
-  border-right: none;
+  border-right: none !important;
   font-weight: bold;
 }
 #navbar :link:hover, #navbar :visited:hover {
