--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -2,7 +2,6 @@
 body {
   background: #fff;
   margin: 10px;
-/*   padding: 29px 0 0; */
   color: #000;
   font: normal 13px verdana,arial,'Bitstream Vera Sans',helvetica,sans-serif;
 }
@@ -89,16 +88,16 @@ legend {
 }
 
 /* Header */
-#header { clear: both; float: left; margin-top: -23px}
-/* #header { clear: both; float: left; padding} */
+#header { clear: both; float: left }
 #header hr { display: none }
-#header img { border: none; margin-top: 0 }
+#header img { border: none; margin: 0 0 -3.5em }
 #header :link, #header :visited, #header :link:hover, #header :visited:hover {
  background: transparent;
  margin-bottom: 2px;
  border: none;
 }
 #search {
+  clear: both;
   font-size: 10px;
   margin-bottom: 1em;
   text-align: right;
@@ -113,10 +112,9 @@ legend {
 #navbar {
   background: url(../topbar_gradient.png) top left #f7f7f7;
   border: 1px solid #999;
-  clear: both;
   font: normal 10px verdana,'Bitstream Vera Sans',helvetica,arial,sans-serif;
   height: 1.6em;
-  margin: .25em 0;
+  margin: .33em 0;
 }
 #navbar ul {
   float: right;
@@ -211,7 +209,7 @@ legend {
   float: right;
   text-align: right;
 }
-#trac-main { padding-top: 23px; }
+
 #page-content { }
 #main {  margin-bottom: 2em; }
 #main-footer { margin-top: 3em; text-align: center; }
